<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomSheet_layout">

    <LinearLayout
        android:id="@+id/fromCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_photo_camera_24"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/fromCamera"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".75dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/fromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/round_image_24"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/fromGallery"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".75dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_exit_to_app_24"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/logOut"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".75dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/round_delete_24"
            app:tint="@color/colorRed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/deleteAccount"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/colorRed"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".75dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>