<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alertDialog">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorWhite2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:text="@string/dialogMessage"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="9dp"/>
            
            <View
                android:layout_width="match_parent"
                android:layout_height=".75dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/cancelTv"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelBtn"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorText"
                    android:layout_margin="4dp"
                    android:padding="5dp"
                    />

                <View
                    android:layout_width="0.75dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="2dp"/>

                <TextView
                    android:id="@+id/deleteAccountTv"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteTv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorRed"
                    android:layout_margin="4dp"
                    android:padding="5dp"/>


            </LinearLayout>
            
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>