<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ForgetPass_Activity">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        app:tint="@color/colorText"
        app:srcCompat="@drawable/round_arrow_back_ios_24" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/f"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite2"
        app:cardElevation="20dp"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPasswordTv2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:hint="@string/emailEdtHint"
                    android:autofillHints="@string/emailEdtHint"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/username"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".75dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/emailErrorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailErrorTv"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_marginTop="7dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="11sp"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_below="@id/card"
        android:id="@+id/receiveCodeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_gradiant"
        android:clickable="true"
        android:focusable="true"
        android:contextClickable="true"
        android:text="@string/receiveCodeBtn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        app:srcCompat="@drawable/illustration" />

</RelativeLayout>